# genawaiter

./: Cargo.toml  README-crates-io.md  README.md
.github/workflows/: ci.yml
examples/: error_propagation.rs  linked_list.rs  recursion.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
genawaiter-macro/: Cargo.toml
genawaiter-proc-macro/: Cargo.toml
genawaiter-proc-macro/src/: lib.rs  visit.rs
src/: core.rs  lib.rs
src/rc/: mod.rs
src/stack/: mod.rs
src/sync/: mod.rs
tests/: rc.rs  stack.rs  sync.rs
tests/ui/: fail_producer_with_argument.stderr  rc_fail_not_awaiting_yield.stderr  stack_fail_not_awaiting_yield.stderr  stack_fail_when_co_is_static.stderr  sync_fail_not_awaiting_yield.stderr
